# finance

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  build-release.bat  build-release.sh
entity/: Cargo.toml
entity/src/: categories.rs  expense.rs  expense_view.rs  income.rs  income_view.rs  investments.rs  lib.rs  login_history.rs  settings.rs  stocks.rs  users.rs
src/: db.rs  error.rs  expense_routes.rs  filters.rs  income_routes.rs  investment_routes.rs  lib.rs  main.rs  settings_routes.rs  stock_update.rs  user_routes.rs
static/: index.html  login.html  manifest.json  register.html  signup.html  sw.js
static/assets/css/: styles.css  styles.css.map  styles.min.css
static/assets/css/custom.css/: styles.css  styles.css.map
static/assets/js/: app.min.js  sidebarmenu.js
static/assets/scss/: styles.scss
static/assets/scss/layouts/: _chart.scss  _header.scss
static/assets/scss/variables/: _variables.scss
static/css/: style.css  styles.css  styles.css.map
static/js/: app.js
static/pages/: add_expense.html  dashboard.html  edit_expense.html  home.html  search_expenses.html
templates/: base.html.tera  index.html.tera  login.html.tera  register.html.tera
templates/pages/: add_expense.html.tera  dashboard.html.tera  edit_income.tera  home.html.tera  income.html.tera  search_expenses.html.tera  settings.html.tera
templates/pages/expense/: add_expense.html.tera  edit_expense.html.tera  search_expenses.html.tera
templates/pages/extended/: add_expense.html.tera  dashboard.html.tera  home.html.tera  income.html.tera  investment.html.tera  search_expenses.html.tera  settings.html.tera
templates/pages/income/: edit_income.tera  income.html.tera
templates/pages/investment/: investment.html.tera  list_stocks.html.tera  save_investment.html.tera  search_investment.html.tera
templates/pages/settings/: budget_categorties.html.tera
