[package]
name = "finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity"]

[dependencies]
rocket = { version ="0.5.0", features = ["secrets"] }
serde = "1.0.193"
serde_json = "1.0.108"
sqlx = {version = "0.7.3", features = ["time"]}
chrono = { version = "0.4.31", features = ["serde"] }
entity = { path = "entity" }

time = { version = "0.3.31", features = ["serde","serde-human-readable", "local-offset"] }

rust-argon2 = "2.0.0"
ring = "0.17.7"
anyhow = "1.0.76"
thiserror = "1.0.52"

#[dependencies.rocket_db_pools]
#version = "=0.1.0-rc.3"
#features = ["sqlx_mysql"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_mysql"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]